--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,7 +38,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="message">Message</label>
+              <label for="message">Message, and/or Feedback</label>
               <textarea rows="5" class="form-control" placeholder="Message" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
