--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form action="//formspree.io/{{ site.email }}" method="POST" name="sentMessage" id="contactForm" novalidate>
+        <form action="https://formspree.io/f/mpwavyay" method="POST" name="sentMessage" id="contactForm" novalidate>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
@@ -32,7 +32,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="message">Message</label>
+              <label for="message">Message, and/or Feedback</label>
               <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
