--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,7 +8,9 @@
       </div>
     </div>
     <div class="portfolio-flex-row">
-      <!-- ADD VID-->
+      <video width="320" height="240" controls>
+        <source src="img/movie.mp4" type="video/mp4">
+      </video>
     </div>
   </div>
 </section>
