--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,9 +8,11 @@
       </div>
     </div>
     <div class="portfolio-flex-row">
-      <video width="320" height="240" controls>
-        <source src="img/movie.mp4" type="video/mp4">
-      </video>
+      <iframe width="400" height="200"
+        src="img/movie.MP4" 
+        frameborder="0"
+        allowfullscreen>
+    </iframe>
     </div>
   </div>
 </section>
