--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="portfolio-flex-row">
-      <iframe width="400" height="200"
+      <iframe width="970px" height="545.625px"
         src="img/movie.MP4" 
         frameborder="0"
         allowfullscreen>
