--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Contact Me</h2>
+        <h2>Contact Us</h2>
         <hr class="star-primary">
       </div>
     </div>
@@ -33,7 +33,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Message, and/or Feedback</label>
-              <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required
+              <textarea rows="5" name="message" class="form-control" placeholder="Message/Feedback" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
